--- a/index.html
+++ b/index.html
@@ -43,26 +43,7 @@
         </div>
 
         <!-- NAVBAR-TWO SECTION  -->
-        <div  class="game-four">
-        <div class="game-on">
-          <div class="game-one">
-            <b><i class="bi bi-search"></i></b>
-          <b>Where to?</b>
-          </div>
-          <div class="game-off"> 
-          <p>Anywhere</p>
-          <span> <i class="bi bi-dot"></i></span>
-          <p>Anyweek</p>
-          <span> <i class="bi bi-dot"></i></span>
-          <p>Addguests</p>
-        </div>
-      </div>
-      <div class="game-two">
-      <a href="https://www.tiktok.com/@value.boy7?_t=8pQ8aop6UNy&_r=1">
-      <p><i class="bi bi-brightness-high-fill"></i></p>
-      </a>
-      </div>
-    </div>
+
 
         <div class="navbar-two container">
 
@@ -115,6 +96,26 @@
           </div>
         </div>
       </div>
+      <div  class="game-four">
+        <div class="game-on">
+          <div class="game-one">
+            <b><i class="bi bi-search"></i></b>
+          <b>Where to?</b>
+          </div>
+          <div class="game-off"> 
+          <p>Anywhere</p>
+          <span> <i class="bi bi-dot"></i></span>
+          <p>Anyweek</p>
+          <span> <i class="bi bi-dot"></i></span>
+          <p>Addguests</p>
+        </div>
+      </div>
+      <div class="game-two">
+      <a href="https://www.tiktok.com/@value.boy7?_t=8pQ8aop6UNy&_r=1">
+      <p><i class="bi bi-brightness-high-fill"></i></p>
+      </a>
+      </div>
+    </div>
       <div class="navbar-one container"></div>
 
       <!-- Nabar Scrollbar -->
@@ -219,9 +220,9 @@
 
     <!-- main one -->
       <main> 
-        <div class="container okay"></div>
+        <div class="container"></div>
     <div class="container">
-      <div class="slider-container container okay">
+      <div class="slider-container container">
         
       <div class="slider-child">
         <a href="second.html"> 
