--- a/second.html
+++ b/second.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="navbar">
           <div class="navbar-image">
-            <a href="final.html">
+            <a href="index.html">
             <img src="images/head1.png" alt="" /> </a>
             <b>airbnb</b>
           </div>
@@ -54,7 +54,7 @@
           <div><h1>Stay in Prince`s Purple Rain house</h1>
           <p class="pp"><i class="bi bi-caret-left"></i></p></div>
           <div class="save">
-          <a href="final.html"><p><i class="bi bi-box-arrow-up"></i> <p class="p">Share</p></p></a>
+          <a href="index.html"><p><i class="bi bi-box-arrow-up"></i> <p class="p">Share</p></p></a>
           <p><i class="bi bi-heart"></i> <p class="p">Save</p> </p>
           </div>
         </div>
